name:                yi-haskell-utils
version:             0.1.0.0
synopsis:            Collection of functions for working with Haskell in Yi
description:         Collection of utility functions for working with Haskell
                     in Yi. Perhaps the contents of this project should go
                     directly into Yi itself but for now they are things
                     that I personally find useful.
homepage:            https://github.com/Fuuzetsu/yi-haskell-utils
license:             GPL-3
license-file:        LICENSE
author:              Mateusz Kowalczyk
maintainer:          fuuzetsu@fuuzetsu.co.uk
category:            Editor
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: git@github.com:Fuuzetsu/yi-haskell-utils.git

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Yi.Mode.Haskell.Utils

  build-depends:       base >=4.6 && <4.7, yi >=0.7
